MMT-491: Fix alignment issue with icons on draft overview

--- a/app/assets/stylesheets/components/_metadata-fields.scss
+++ b/app/assets/stylesheets/components/_metadata-fields.scss
@@ -22,6 +22,9 @@
 }
 
 .progress-indicator {
+  a[title$=complete] {
+    vertical-align: middle;
+  }
 
   li {
     @include span-columns(4);
